--- a/data-get/oddsportal/raw/champions-league-2019-2020-page-1.html
+++ b/data-get/oddsportal/raw/champions-league-2019-2020-page-1.html
@@ -76,7 +76,7 @@
 
 			<div id="top-right-social-column">
 				<div id="top-right-social-column-child">
-					<div class="fb-like fb_iframe_widget" data-href="http://www.facebook.com/OddsPortal" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false" style="margin-top:3px;" fb-xfbml-state="parsed" fb-iframe-plugin-query="action=like&amp;app_id=393736670647047&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 81px; height: 20px;"><iframe name="f224ce0130a7eca" data-testid="fb:like Facebook Social Plugin" title="fb:like Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: hidden; width: 81px; height: 20px;" src="https://www.facebook.com/plugins/like.php?action=like&amp;app_id=393736670647047&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D46%23cb%3Df1c85884100848%26domain%3Dwww.oddsportal.com%26origin%3Dhttps%253A%252F%252Fwww.oddsportal.com%252Ff115b222558b796%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true" class="" width="1000px" height="1000px" frameborder="0"></iframe></span></div>
+					<div class="fb-like fb_iframe_widget" data-href="http://www.facebook.com/OddsPortal" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false" style="margin-top:3px;" fb-xfbml-state="rendered" fb-iframe-plugin-query="action=like&amp;app_id=393736670647047&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 81px; height: 20px;"><iframe name="f11857abee03f24" data-testid="fb:like Facebook Social Plugin" title="fb:like Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 81px; height: 20px;" src="https://www.facebook.com/plugins/like.php?action=like&amp;app_id=393736670647047&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D46%23cb%3Df3d8bf9228ed38a%26domain%3Dwww.oddsportal.com%26origin%3Dhttps%253A%252F%252Fwww.oddsportal.com%252Ff10652cae2618c%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true" class="" width="1000px" height="1000px" frameborder="0"></iframe></span></div>
 				</div>
 			</div>
 		
@@ -123,7 +123,7 @@
 </div>
 			<div><label>Time:</label></div>
 			<div>
-				<a href="#" class="user-header-fakeselect" onclick="op.showHideTimeZone();ElementSelect.expand( 'user-header-timezone' , 'user-header-timezone-expander' , null , function(){op.hideTimeZone()} );this.blur();return false;" id="user-header-timezone-expander"><span>19 May 06:46, GMT 0</span></a>
+				<a href="#" class="user-header-fakeselect" onclick="op.showHideTimeZone();ElementSelect.expand( 'user-header-timezone' , 'user-header-timezone-expander' , null , function(){op.hideTimeZone()} );this.blur();return false;" id="user-header-timezone-expander"><span>19 May 06:53, GMT 0</span></a>
 			</div>
 
 
