--- a/data-get/oddsportal/raw/champions-league-2019-2020-page-4.html
+++ b/data-get/oddsportal/raw/champions-league-2019-2020-page-4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs">
 <head>
-<script src="https://connect.facebook.net/en_US/all.js?hash=315516685253d6ab528d09b9a244c9d7" async="" crossorigin="anonymous"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=393736670647047"></script><meta http-equiv="content-type" content="text/html; charset=utf-8">
+<script src="https://connect.facebook.net/en_US/all.js?hash=33db77a262d5cb2ad9db0df8f153d155" async="" crossorigin="anonymous"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=393736670647047"></script><script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="expires" content="Thu, 01 Jan 1970 00:59:59 GMT">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -40,7 +40,7 @@
 <meta name="description" content="Archived betting odds and match results from Champions League. Archived results guide you through the soccer Champions League historical results and winning odds.">
 <meta name="keywords" content="odds portal, odds comparison, archive, historical odds, results, betting odds, odds archive">
 <title>Champions League Results &amp; Historical Odds, Soccer Europe Archive</title>
-<script type="text/javascript" src="/ajax-userdata/?1589870784ec1f764517b7ffb52057af6df18142b7"></script><link rel="Stylesheet" href="/res/x/global-200515104602.css" type="text/css" media="screen, projection">
+<script type="text/javascript" src="/ajax-userdata/?15898718392711ab32f69d23c546d5411382c724a6"></script><link rel="Stylesheet" href="/res/x/global-200515104602.css" type="text/css" media="screen, projection">
 <link rel="Stylesheet" href="/res/x/bookmakers-200515104602-1589862831.css" type="text/css" media="screen, projection">
 <!--[if IE]>
 	<link rel="Stylesheet" href="/res/x/ie-200515104602.css" type="text/css" media="screen, projection"/>
@@ -76,7 +76,7 @@
 
 			<div id="top-right-social-column">
 				<div id="top-right-social-column-child">
-					<div class="fb-like fb_iframe_widget" data-href="http://www.facebook.com/OddsPortal" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false" style="margin-top:3px;" fb-xfbml-state="rendered" fb-iframe-plugin-query="action=like&amp;app_id=393736670647047&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 81px; height: 20px;"><iframe name="f2f696ec97ec30e" data-testid="fb:like Facebook Social Plugin" title="fb:like Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 81px; height: 20px;" src="https://www.facebook.com/plugins/like.php?action=like&amp;app_id=393736670647047&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D46%23cb%3Df3fea74ee73aa2c%26domain%3Dwww.oddsportal.com%26origin%3Dhttps%253A%252F%252Fwww.oddsportal.com%252Ff2dad73c6ed015c%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true" class="" width="1000px" height="1000px" frameborder="0"></iframe></span></div>
+					<div class="fb-like fb_iframe_widget" data-href="http://www.facebook.com/OddsPortal" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false" style="margin-top:3px;" fb-xfbml-state="rendered" fb-iframe-plugin-query="action=like&amp;app_id=393736670647047&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 81px; height: 20px;"><iframe name="f3853da987d79ba" data-testid="fb:like Facebook Social Plugin" title="fb:like Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 81px; height: 20px;" src="https://www.facebook.com/plugins/like.php?action=like&amp;app_id=393736670647047&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D46%23cb%3Df9b846483461aa%26domain%3Dwww.oddsportal.com%26origin%3Dhttps%253A%252F%252Fwww.oddsportal.com%252Ff3ed3d3415e336a%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.facebook.com%2FOddsPortal&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=false&amp;show_faces=true" class="" width="1000px" height="1000px" frameborder="0"></iframe></span></div>
 				</div>
 			</div>
 		
@@ -123,7 +123,7 @@
 </div>
 			<div><label>Time:</label></div>
 			<div>
-				<a href="#" class="user-header-fakeselect" onclick="op.showHideTimeZone();ElementSelect.expand( 'user-header-timezone' , 'user-header-timezone-expander' , null , function(){op.hideTimeZone()} );this.blur();return false;" id="user-header-timezone-expander"><span>19 May 06:53, GMT 0</span></a>
+				<a href="#" class="user-header-fakeselect" onclick="op.showHideTimeZone();ElementSelect.expand( 'user-header-timezone' , 'user-header-timezone-expander' , null , function(){op.hideTimeZone()} );this.blur();return false;" id="user-header-timezone-expander"><span>19 May 07:03, GMT 0</span></a>
 			</div>
 
 
@@ -1215,7 +1215,7 @@
 <li id="t_44139" class="tournament">
                                             <a href="/american-football/usa/nfl/">NFL</a><span class="number"> (32)</span>  </li>
 	                                <li id="t_44141" class="tournament">
-                                            <a href="/american-football/usa/ncaa/">NCAA</a><span class="number"> (175)</span>  </li>
+                                            <a href="/american-football/usa/ncaa/">NCAA</a><span class="number"> (58)</span>  </li>
 	                                      </ul>
 </li>
                                         </ul>
@@ -1795,6 +1795,6 @@
 hasSessionStorage:function(){try{return!!window.sessionStorage}catch(a){return!0}},hasIndexDb:function(){try{return!!window.indexedDB}catch(a){return!0}},isCanvasSupported:function(){var a=document.createElement("canvas");return!(!a.getContext||!a.getContext("2d"))},isIE:function(){return"Microsoft Internet Explorer"===navigator.appName||"Netscape"===navigator.appName&&/Trident/.test(navigator.userAgent)?!0:!1},getPluginsString:function(){return this.isIE()&&this.ie_activex?this.getIEPluginsString():
 this.getRegularPluginsString()},getRegularPluginsString:function(){return this.map(navigator.plugins,function(a){var c=this.map(a,function(a){return[a.type,a.suffixes].join("~")}).join(",");return[a.name,a.description,c].join("::")},this).join(";")},getIEPluginsString:function(){if(window.ActiveXObject){var a="ShockwaveFlash.ShockwaveFlash;AcroPDF.PDF;PDF.PdfCtrl;QuickTime.QuickTime;rmocx.RealPlayer G2 Control;rmocx.RealPlayer G2 Control.1;RealPlayer.RealPlayer(tm) ActiveX Control (32-bit);RealVideo.RealVideo(tm) ActiveX Control (32-bit);RealPlayer;SWCtl.SWCtl;WMPlayer.OCX;AgControl.AgControl;Skype.Detection".split(";");
 return this.map(a,function(a){try{return new ActiveXObject(a),a}catch(e){return null}}).join(";")}return""},getScreenResolution:function(){var a;return a=this.screen_orientation?screen.height>screen.width?[screen.height,screen.width]:[screen.width,screen.height]:[screen.height,screen.width]},getCanvasFingerprint:function(){var a=document.createElement("canvas"),c=a.getContext("2d"),e="http://valve.github.io";c.textBaseline="top";c.font="14px 'Arial'";c.textBaseline="alphabetic";c.fillStyle="#f60";
-c.fillRect(125,1,62,20);c.fillStyle="#069";c.fillText(e,2,15);c.fillStyle="rgba(102, 204, 0, 0.7)";c.fillText(e,4,17);return a.toDataURL()}};return g});dataLayer.push({event:"gtm.fingerprint"});</script><iframe src="https://gum.criteo.com/syncframe?topUrl=www.oddsportal.com#%7B%22optout%22:%7B%22value%22:false,%22origin%22:0%7D,%22uid%22:%7B%22origin%22:0%7D,%22idfs%22:%7B%22origin%22:0%7D,%22sid%22:%7B%22origin%22:0%7D,%22origin%22:%22publishertag%22,%22version%22:89,%22lwid%22:%7B%22origin%22:0%7D,%22tld%22:%22oddsportal.com%22,%22bundle%22:%7B%22value%22:%22Y_D5oF9talB2YkpjSXdObExUZ3VreFdwU0QwMWRvTzk4ODh1Y2Q3ZW1vU3dVbm1ZeTNFYU5XdXdZdGh1YlBXNDRjTUZoTnp5Z3ZzUzl3JTJGRTMzOHFwY3l0Q3VqbDBTVk80JTJCQnJqYVNkN0Z2U1NBMmpmdmlhdWxEbTNzUGt4d0Q3Z2RCaW9QTmQ5T0RxODlqVFY2ZUE4M25OZXhkSjhnblJWakMyRmhkT2VQVmRyNnZNJTNE%22,%22origin%22:3%7D,%22topUrl%22:%22www.oddsportal.com%22,%22cw%22:true%7D" id="criteo-syncframe" style="display: none;"></iframe><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; width: 0px; height: 0px;"><div></div></div></div>
+c.fillRect(125,1,62,20);c.fillStyle="#069";c.fillText(e,2,15);c.fillStyle="rgba(102, 204, 0, 0.7)";c.fillText(e,4,17);return a.toDataURL()}};return g});dataLayer.push({event:"gtm.fingerprint"});</script><iframe src="https://gum.criteo.com/syncframe?topUrl=www.oddsportal.com#%7B%22optout%22:%7B%22value%22:false,%22origin%22:0%7D,%22uid%22:%7B%22origin%22:0%7D,%22idfs%22:%7B%22origin%22:0%7D,%22sid%22:%7B%22origin%22:0%7D,%22origin%22:%22publishertag%22,%22version%22:89,%22lwid%22:%7B%22origin%22:0%7D,%22tld%22:%22oddsportal.com%22,%22bundle%22:%7B%22value%22:%22l7vbZF9JWTBDdHVJaEZjcWFmMHh3ZzhiQXFhb0Y0TCUyQkFlWTdXWnlac09KSm0xSTlpU0ZOWnoxWHFZR0slMkJEVVlwNzFlaXElMkJRYWpINUk0bHllR284M2JiZlk1R3ZuYiUyQjQ4eFhmdzQ1aEtsckpkem1jRDAybnlhcVN1MWkyeTFQakdLTUJGZ2NoNlNMSWs2cnVycXVydDRkQSUyRnlraHZmUHNMZDhNZ0hUU2hveElhajZrJTNE%22,%22origin%22:3%7D,%22topUrl%22:%22www.oddsportal.com%22,%22cw%22:true%7D" id="criteo-syncframe" style="display: none;"></iframe><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; width: 0px; height: 0px;"><div></div></div></div>
 </body>
 </html>
