--- a/data-get/fbref/raw/seasons/Champions-League-Qualifying-Rounds.html
+++ b/data-get/fbref/raw/seasons/Champions-League-Qualifying-Rounds.html
@@ -183,7 +183,7 @@ function vjs_getUrlParameter(e){e=e.replace(/[\[]/,"\\[").replace(/[\]]/,"\\]");
 var _sr_modern_url = ''.concat(document.srdev?'https://d2p3bygnnzw9w3.cloudfront.net/nocdn/dev/'.concat(document.srdev.substring(0, 2)):"https://d2p3bygnnzw9w3.cloudfront.net/req/202104281",
                                "/js/fb", "/sr",document.srdev?"":"-min",Modernizr.lang?'-'.concat(Modernizr.lang):'',   			       ".js");
 loadJS( _sr_modern_url, function() { vjs_ready(sr_fire_js); });
-</script><!-- JS END --><!-- include:end ="/inc/klecko_header_fb.html_f" --><script>sr_utilities_js_loader.push(function() { vjs_createCookie('srcssfull', 'yes', 0.5 )});</script><meta name="revised" content="00:30:34 29-Apr-2021">
+</script><!-- JS END --><!-- include:end ="/inc/klecko_header_fb.html_f" --><script>sr_utilities_js_loader.push(function() { vjs_createCookie('srcssfull', 'yes', 0.5 )});</script><meta name="revised" content="14:46:15 30-Apr-2021">
 <meta name="HandheldFriendly" content="True">
 <meta name="HandheldFriendly" content="True">
 <meta name="generated-by" content="/home/fb/deploy/www/base_en/comps/comp_year.fcgi">
@@ -769,7 +769,7 @@ var sr_menus_checkInfoCookie_run_inline = true;
          
             <br><div>
 <div class="section_heading">
-<span class="section_anchor" id="a13791" data-label="Qualifying rounds"></span><h2>Qualifying rounds </h2>
+<span class="section_anchor" id="a24312" data-label="Qualifying rounds"></span><h2>Qualifying rounds </h2>
 </div>
 <p> </p> </div>
 <h3>Play-off round <small>(September 22, 2020 to September 30, 2020)</small>
@@ -2602,7 +2602,7 @@ var sr_menus_checkInfoCookie_run_inline = true;
 </div>
 <br><div>
 <div class="section_heading">
-<span class="section_anchor" id="a21724" data-label="Preliminary round"></span><h2>Preliminary round </h2>
+<span class="section_anchor" id="a52827" data-label="Preliminary round"></span><h2>Preliminary round </h2>
 </div>
 <p> </p> </div>
 <h3>Final <small>(August 11, 2020)</small>
@@ -2851,21 +2851,21 @@ var sr_menus_checkInfoCookie_run_inline = true;
 <li>
         <a href="/en/players/">Players</a>
         <div>
-<a href="/en/players/71c5f16f/Andrea-Pirlo">Andrea Pirlo</a>, 
-<a href="/en/players/1ecb65be/Theo-Walcott">Theo Walcott</a>, 
-<a href="/en/players/1ab21535/Therese-Sjogran">Therese Sjögran</a>, 
-<a href="/en/players/5e36a0dd/Miroslav-Klose">Miroslav Klose</a>, 
-<a href="/en/players/78841da9/Jose-Callejon">José Callejón</a>, 
-<a href="/en/players/b2ad4c4d/Katie-Duncan">Katie Duncan</a>, 
+<a href="/en/players/b4945edc/Perpetua-Nkwocha">Perpetua Nkwocha</a>, 
+<a href="/en/players/8a08491a/Gonzalo-Higuain">Gonzalo Higuaín</a>, 
+<a href="/en/players/3ca7254a/Pedro">Pedro</a>, 
+<a href="/en/players/9c526e5b/Trine-Ronning">Trine Rønning</a>, 
+<a href="/en/players/8d78e732/Robert-Lewandowski">Robert Lewandowski</a>, 
+<a href="/en/players/ad6df2d5/Miralem-Pjanic">Miralem Pjanić</a>, 
+<a href="/en/players/a39bb753/Eden-Hazard">Eden Hazard</a>, 
+<a href="/en/players/73d9bdc7/Peter-Crouch">Peter Crouch</a>, 
+<a href="/en/players/c65fc5cf/Ali-Riley">Ali Riley</a>, 
+<a href="/en/players/be927d03/Ashley-Young">Ashley Young</a>, 
+<a href="/en/players/c15ecf4d/Caroline-Seger">Caroline Seger</a>, 
 <a href="/en/players/019544ff/Caitlin-Foord">Caitlin Foord</a>, 
-<a href="/en/players/59ef6268/Tobin-Heath">Tobin Heath</a>, 
-<a href="/en/players/42276181/Kevin-Gameiro">Kévin Gameiro</a>, 
-<a href="/en/players/4c5b14d2/Joaquin">Joaquín</a>, 
-<a href="/en/players/89143f59/Birgit-Prinz">Birgit Prinz</a>, 
-<a href="/en/players/3857e361/Marta">Marta</a>, 
-<a href="/en/players/ed75b6c7/Francesco-Totti">Francesco Totti</a>, 
-<a href="/en/players/bdf7b97d/Fernando-Torres">Fernando Torres</a>, 
-<a href="/en/players/527f063d/Edinson-Cavani">Edinson Cavani</a>, 
+<a href="/en/players/df69b544/Antoine-Griezmann">Antoine Griezmann</a>, 
+<a href="/en/players/6a435e8d/Sam-Kerr">Sam Kerr</a>, 
+<a href="/en/players/4d034881/Sergio-Aguero">Sergio Agüero</a>, 
 <a href="/en/players/">...</a>        </div>
     </li>
     <li>
@@ -3031,11 +3031,11 @@ var sr_menus_checkInfoCookie_run_inline = true;
     <li>
         <a href="/en/matches/">Scores &amp; Fixtures</a>
         <div>
-<a href="/en/matches/2021-04-27">Tuesday April 27, 2021</a>, 
 <a href="/en/matches/2021-04-28">Wednesday April 28, 2021</a>, 
 <a href="/en/matches/2021-04-29">Thursday April 29, 2021</a>, 
 <a href="/en/matches/2021-04-30">Friday April 30, 2021</a>, 
-<a href="/en/matches/2021-05-01">Saturday May 1, 2021</a>        </div>
+<a href="/en/matches/2021-05-01">Saturday May 1, 2021</a>, 
+<a href="/en/matches/2021-05-02">Sunday May 2, 2021</a>        </div>
     </li>
     <li>
         <a href="/en/countries/">Countries</a>
@@ -3124,7 +3124,7 @@ var sr_menus_checkInfoCookie_run_inline = true;
 	<a href="https://www.paypal.me/sportsref" data-tip="Send us money via PayPal" data-label="PayPal" class="poptip"><svg class="icon paypal"><use xlink:href="#ic-paypal"></use></svg></a>
 
 <p>Every <a href="https://www.sports-reference.com/blog/sports-reference-social-media/">Sports Reference Social Media Account</a></p>
-<p><strong>Site Last Updated:</strong> Wednesday, April 28,  8:44PM
+<p><strong>Site Last Updated:</strong> Friday, April 30, 12:24PM
 </p>
 <p><a href="#" onclick="FreshworksWidget('open'); return false;" class="button alt">Question, Comment, Feedback, or Correction?</a></p>
 
